--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,3 +7,57 @@
 
 @import 'reset.scss';
 @import 'variables.scss';
+@import 'checkbox.scss';
+@import 'rendersFilms.scss';
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
