--- a/src/sass/reset.scss
+++ b/src/sass/reset.scss
@@ -15,7 +15,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     line-height: 1; }
   
   ol, ul {
-    list-style: none; }
+    list-style: none; 
+  }
   
   blockquote, q {
     quotes: none; }
