--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -56,7 +56,7 @@ body {
 @media (min-width: 1024px) {
 
     html {
-        /* position: relative; */
+        position: relative;
     }
     
     body {
@@ -82,10 +82,11 @@ body {
         justify-content: space-evenly;
         align-items: unset;
         height: 100%;
+        position: relative;
     }
     
     .filters_types_box {
-        display: none;
+        display: flex;
         flex-wrap: wrap;
         width: 250px;
         height: 500px;
@@ -93,8 +94,11 @@ body {
         justify-content: space-evenly;
         align-items: unset;
         border-radius: 0 20px 20px 0;
-        /* position: absolute;
-        left: -250px; */
+        position: absolute;
+        left: -250px;
+        animation-name: moveOn;
+        animation-duration: 1.5s;
+        animation-fill-mode: both;
     }
     
     .text_general {
@@ -107,6 +111,9 @@ body {
     
     .button_wrapper {
         display: unset;
+        position: absolute;
+        bottom: 70px;
+        left: 70px;
     }
     
     .button {
@@ -125,17 +132,22 @@ body {
     }
 
     .switcher {
-        display: flex;
-        /* animation-name: move;
-        animation-duration: 2s; */
+        animation-name: moveOff;
+        animation-duration: 1.5s;
+        animation-fill-mode: both;
     }
 
-    /* @keyframes move {
+    .switcher_off {
+
+    }
+
+    @keyframes moveOn {
         from { left: -250; }
         to { left: 0; }
-    } */
+    }
 
-    /* .switcher_off {
-        display: none;
-    } */
+    @keyframes moveOff {
+        from { left: 0; }
+        to { left: -250; }
+    }
 }
