--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -4,7 +4,7 @@
 $purple: #833ab4;
 $dark-purple: #42185e;
 $grey: #9998c8;
-$white-grey: #b1b1dd;
+$white-grey: #c0c0cf;
 $black: #242428;
 
 $font-text-describe: 'Arimo', sans-serif;
