--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -3,6 +3,10 @@
     height: 90px;
     background-color: $purple;
     padding: 5px 15px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 6;
 }
 
 .header__content {
