--- a/src/sass/renderFilm.scss
+++ b/src/sass/renderFilm.scss
@@ -23,15 +23,17 @@
   background-color: $purple;
   margin: 25px 25px 25px 30px ;
   border-radius: 10px;
-  transition: 350ms linear;
+  transition: 200ms linear;
   cursor: pointer;
-  border: 3px solid $white-grey;
-
+  border: 3px solid transparent;
+  z-index: 4;
 }
+
 .card:hover{
-  -webkit-box-shadow: 0px 0px 63px 18px rgba(0,0,0,0.26);
--moz-box-shadow: 0px 0px 63px 18px rgba(0,0,0,0.26);
-box-shadow: 0px 0px 63px 18px rgba(0,0,0,0.26);
+  -webkit-box-shadow: 21px 24px 46px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 21px 24px 46px 0px rgba(0, 0, 0, 1);
+  box-shadow: 21px 24px 46px 0px rgba(0, 0, 0, 1);
+  border: 3px solid $white-grey;
 
 }
 
@@ -42,6 +44,12 @@ margin: 5px 5px 5px 3px;
 
 .img_if{
 border-radius: 10px;
+pointer-events: none;
+}
+
+.img_unless {
+  border-radius: 10px;
+  pointer-events: none;
 }
 
 
@@ -55,10 +63,11 @@ background-color: $purple;
 border: none;
 border-radius: 10px;
 border: 3px solid $white-grey;
-}
-
-.load_more.load_more_text-content {
-display: none;
+font-weight: 700;
+font-size: 15px;
+font-family: $font-title-card;
+color: $white-grey;
+margin-bottom: 20px;
 }
 
 .raiting{
@@ -72,21 +81,34 @@ display: none;
   justify-content: center;
   
 }
-.card-menu-rating{}
+
 .id_films{
 opacity: 0;
 pointer-events: none;
 visibility: hidden;
-
+display: none;
 }
 
 .main{
-  width: 100vw;
-  height: 100vh;
+  margin-top: 90px;
 }
 
 .films_section{
+  width: 100%;
+  height: 100%;
 margin: 0 auto;
-padding: 25px 0 15px 0;
+padding-top: 25px;
 text-align: center;
+}
+
+.card_menu-wrapper {
+  pointer-events: none;
+}
+
+.div_wrapper {
+  pointer-events: none;
+}
+
+.main {
+  position: relative;
 }
