--- a/src/sass/infoFilm.scss
+++ b/src/sass/infoFilm.scss
@@ -1,5 +1,4 @@
 .infoFilmImg {
-    background-color: $grey;
     width: 125px;
     height: 185px;
     border-radius: 10px;
@@ -21,7 +20,7 @@
 .infoFilmTrailer {
     width: 250px;
     height: 150px;
-    border-radius: 10px;
+    border-radius: 30px;
 }
 
 .background_modal {
@@ -61,8 +60,8 @@
 }
 
 .backDropModal {
-    width: 800px;
-    height: 600px;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -73,7 +72,15 @@
     z-index: 10;
     transition: 300ms linear;
     overflow: hidden;
+    opacity: 0;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(0,0,0,0.7402311266303396) 0%);
 }
+
+.opacityBackdrop {
+    opacity: 1;
+}
+
 .imgBackgroundModal {
     height: 550px;
     width: 550px;
@@ -121,15 +128,27 @@
     color: #fff;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
     .infoFilmImg {
-        background-color: $grey;
         width: 100px;
         height: 125px;
     }
+
+    .infoFilmText__wrapper {
+        width: 235px;
+    }
+
+    .infoFilmText {
+        font-size: 10px;
+    }
+
     .imgBackgroundModal {
         height: 400px;
-        width: 320px;
+        max-width: 500px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .infoFilmTrailer {
@@ -137,17 +156,23 @@
         height: 150px;
     }
 
+    .wrapperTrailer_infoFilm {
+        height: 400px;
+        max-width: 500px;
+        width: 100%;
+    }
+
     .background_modal {
         height: 400px;
-        width: 320px;
+       max-width: 500px;
+       width: 100%;
     }
 
     .infoFilmWrapper {
-        width: 250px;
+        width: 310px;
         display: flex;
         justify-content: space-between;
         margin: 0 auto;
-        padding: 45px 0 0 0;
     }
 
     .titleFilmModal {
@@ -174,21 +199,40 @@
     }
 
     .infoFilmTrailer {
-        width: 450px;
+        width: 400px;
         height: 250px;
+        padding-top: 15px;
+    }
+
+    .infoFilmText {
+        font-size: 15px;
+    }
+
+    .wrapperTrailer_infoFilm {
+        height: 550px;
+        width: 550px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 
     .imgBackgroundModal {
-        height: 550px;
-        width: 550px;
+        height: 600px;
+        width: 800px;
     }
     .background_modal {
-        height: 550px;
-        width: 550px;
+        height: 600px;
+        width: 800px;
+    }
+
+    .infoFilmText__wrapper {
+        width: 300px;
     }
 
     .infoFilmWrapper {
-        width: 448px;
+        width: 490px;
         padding: 55px 0 0 0;
     }
     .titleFilmModal {
@@ -211,12 +255,12 @@
 
     .background_modal {
         height: 600px;
-        width: 800px;
+       max-width: 800px;
     }
 
     .imgBackgroundModal {
         height: 600px;
-        width: 800px;
+        max-width: 800px;
     }
     .infoFilmWrapper {
         width: 600px;
